# HollowTrace

./: .gitignore  .gitmodules  CMakeLists.txt  Info.plist
App/: main.c
HollowTrace.xcodeproj/: project.pbxproj
HollowTrace.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
HollowTrace.xcodeproj/xcshareddata/xcschemes/: App.xcscheme  HollowTrace.xcscheme  Test.xcscheme  Tracer.xcscheme
HollowTrace.xcworkspace/: contents.xcworkspacedata
Source/: HCPrimitive.h  HCPrimitive_Internal.h  HCVector.h  HollowTrace.h  main.c
Source/Data/: HCRay.c  HCRay.h  HCTriangle.c  HCTriangle.h  HCVector.c  HCVector.h
Source/Light/: HCLight.c  HCLight.h  HCLight_Internal.h  HCPointLight.c  HCPointLight.h  HCPointLight_Internal.h
Source/Primitive/: HCMesh.c  HCMesh.h  HCMesh_Internal.h  HCPlane.c  HCPlane.h  HCPlane_Internal.h  HCPrimitive.c  HCPrimitive.h  HCPrimitive_Internal.h  HCSphere.c  HCSphere.h
Test/: HCRay.c  HCVector.c  Trace.c  main.c
